# vendetta-markets-smart-contracts

./: .gitignore  Cargo.toml  README.md  codecov.yml  package-lock.json  schema.Makefile.toml  wasmkit.config.js
.github/: dependabot.yml
.github/workflows/: artifacts.yml  ci.yml  coverage.yml  main.yml  scripts.yml
contracts/fixed-odds-market/: Cargo.toml  README.md
contracts/fixed-odds-market/examples/: schema.rs
contracts/fixed-odds-market/schema/: instantiate_msg.json
contracts/fixed-odds-market/src/: error.rs  lib.rs  msg.rs  state.rs
contracts/fixed-odds-market/tests/: helpers.rs  test_update_owner.rs
contracts/parimutuel-market/: Cargo.toml  README.md
contracts/parimutuel-market/examples/: schema.rs
contracts/parimutuel-market/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/parimutuel-market/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/parimutuel-market/tests/: helpers.rs  test_instantiate.rs  test_update_owner.rs
scripts/: deploy-script.ts
smart-contracts/: README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
smart-contracts-cw/: .gitignore  Cargo.toml  Makefile.toml  README.md  coverage_grcov.Makefile.toml  package-lock.json  package.json  schema.Makefile.toml  wasmkit.config.js
smart-contracts-cw/.github/workflows/: scripts.yml
smart-contracts-cw/contracts/parimutual-market/: Cargo.toml  README.md
smart-contracts-cw/contracts/parimutual-market/examples/: schema.rs
smart-contracts-cw/contracts/parimutual-market/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
smart-contracts-cw/contracts/parimutual-market/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
smart-contracts-cw/contracts/parimutual-market/tests/: helpers.rs  test_instantiate.rs
smart-contracts-cw/scripts/: deploy-script.ts
smart-contracts/contracts/: Factory.sol  FakeToken.sol  GameMarket.sol  Market.sol  Oracle.sol  VChipToken.sol
smart-contracts/contracts/ERC20/: ERC20.sol
smart-contracts/scripts/: deploy.ts  generate-wallet.ts  set-score.ts  test.ts
smart-contracts/test/: GameMarket.test.ts
smart-contracts/test/unit/: Factory.test.ts  Market.test.ts  Oracle.test.ts
