[package]
name = "vendetta-markets-parimutual-market"
description = "A smart contract that handles the betting parimutual market logic of Vendetta Markets"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[profile.release]
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
bech32 = { workspace = true }
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
cw-utils = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
serde = { workspace = true }
